# sql-alchemy-insert-tests

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  entrypoint.sh  init.sql  init_pg.sql  main.py  models.py  pyproject.toml
docs/: bulk-insert-performance-analysis.md
mssql/: __init__.py
mssql_pymssql/: __init__.py
postgres/: __init__.py
psycopg3/: __init__.py
tests/: conftest.py  test_bulk_insert.py
tests/mssql/: conftest.py  test_bulk_insert.py
tests/mssql_pymssql/: conftest.py  test_pymssql_bulk_insert.py
tests/postgres/: conftest.py  test_pg_bulk_insert.py
tests/psycopg3/: conftest.py  test_pg3_bulk_insert.py
